[package]
name = "muggle_macros"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
description = "Macros for muggle"
readme = "../README.md"
documentation = "https://docs.rs/muggle_macros"
repository = "https://github.com/morr0ne/muggle"
include = ["src/**/*.rs", "../README.md", "../LICENSE-APACHE", "../LICENSE-MIT"]

[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.39"
syn = "1.0.95"
quote = "1.0.18"
